<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.EditContactActivity">

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/editContactSpinKit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="@style/SpinKitView.Large.Circle"
        app:SpinKit_Color="@color/colorPrimaryDark"
        android:visibility="gone"/>

    <android.support.v7.widget.Toolbar
        android:id="@+id/editContactToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        app:title=""
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/editContactToolbar"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/editContactEditTxtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/name"/>

        <EditText
            android:id="@+id/editContactEditTxtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLines="1"
            android:hint="@string/phone_number"/>

        <EditText
            android:id="@+id/editContactEditTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/editContactEditTxtType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/type"/>

    </LinearLayout>

</RelativeLayout>