<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddContactActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/addContactToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        app:title=""
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/addContactToolbar"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/addContactEditTxtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/name"/>

        <TextView
            android:id="@+id/addContactNameError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_new_releases_red_24dp"
            android:drawablePadding="2dp"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/addContactEditTxtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLines="1"
            android:hint="@string/phone_number"/>


        <TextView
            android:id="@+id/addContactPhoneError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_new_releases_red_24dp"
            android:drawablePadding="2dp"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/addContactEditTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:hint="@string/email"/>

        <TextView
            android:id="@+id/addContactEmailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_new_releases_red_24dp"
            android:drawablePadding="2dp"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/addContactEditTxtType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/type"/>

        <TextView
            android:id="@+id/addContactTypeError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_new_releases_red_24dp"
            android:drawablePadding="2dp"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/addContactBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/PrimaryButton"
            android:text="@string/add_contact"/>

    </LinearLayout>

</RelativeLayout>