<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <LinearLayout
        android:id="@+id/rowLayoutContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/rowTxtCount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="28sp"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/bg_txt_contact"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rowTxtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/name"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/rowTxtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_below="@+id/rowTxtName"
                android:text="@string/email"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/rowTxtType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_below="@+id/rowTxtEmail"
                android:text="@string/type"/>

            <TextView
                android:id="@+id/rowTxtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_below="@+id/rowTxtType"
                android:layout_alignParentEnd="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:layout_below="@+id/rowTxtDate"
                android:background="@android:color/black"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>